--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
     "@types/node": "^22.10.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@mistralai/mistralai": "^1.14.0",
+    "dotenv": "^17.2.4"
   }
 }
