feat: ajoute un générateur de messages de commit avec IA Mistral
- Intègre un CLI `git-commit` pour générer automatiquement des messages de commit
- Ajoute un wrapper Git complet avec méthodes pour interagir avec le dépôt
- Met à jour la documentation avec des exemples d'utilisation
- Configure le package pour une installation globale via npm/yarn
- Utilise l'API Mistral pour générer des messages descriptifs et concis

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
 	"version": "1.0.0",
 	"description": "A command-line tool for Git operations",
 	"type": "module",
+	"bin": {
+		"git-commit": "./dist/git-commit.js"
+	},
 	"scripts": {
 		"build": "tsc",
+		"postbuild": "chmod +x dist/git-commit.js",
 		"dev": "tsc --watch",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
