--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"postbuild": "chmod +x dist/git-commit.js",
 		"dev": "tsc --watch",
 		"lint": "biome check .",
-		"lint:fix": "biome check --write .",
-		"format": "biome format --write ."
+		"lint:fix": "biome check --write ."
 	},
 	"keywords": [
 		"git",
