--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
-  "name": "git-tool",
-  "version": "1.0.0",
-  "description": "A command-line tool for Git operations",
+  "name": "@fzed51/git-tool",
+  "version": "0.1.0",
+  "description": "A command-line tool for Git operations with AI-powered commit message generation",
   "type": "module",
+  "main": "./dist/lib/index.js",
+  "types": "./dist/lib/index.d.ts",
   "bin": {
     "git-commit": "./dist/git-commit.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/lib/index.d.ts",
+      "import": "./dist/lib/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
   },
   "scripts": {
     "build": "tsc",
     "postbuild": "chmod +x dist/git-commit.js",
+    "prepublishOnly": "npm run build",
     "dev": "tsc --watch",
     "lint": "biome check .",
     "lint:fix": "biome check --write ."
@@ -21,10 +38,13 @@
     "command-line",
     "version-control",
     "IA",
-    "AI"
+    "AI",
+    "mistral",
+    "commit-message",
+    "automation"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Fabien Sanchez",
+  "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
     "@types/node": "^22.10.2",
