chore: update dev script to use tsx for direct execution
The dev script now runs the TypeScript file directly with tsx instead of using tsc in watch mode. This change enables faster development iteration by eliminating the need for a separate build step during development.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "tsc",
     "postbuild": "chmod +x dist/git-commit.js",
     "prepublishOnly": "npm run build",
-    "dev": "tsc --watch",
+    "dev": "tsx src/git-commit.ts",
     "lint": "biome check .",
     "lint:fix": "biome check --write ."
   },
