feat: add git-changelog command for AI-powered changelog generation
- New CLI command to generate changelogs from Git history using Mistral
  AI
- Automatically categorizes commits into Added/Changed/Fixed sections
- Interactive confirmation before updating CHANGELOG.md
- Optional auto-commit of changelog updates
- New GitWrapper method getLogSince() for commit history since a tag
- Updated package.json with new binary entry and postbuild script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/lib/index.js",
   "types": "./dist/lib/index.d.ts",
   "bin": {
-    "git-commit": "./dist/git-commit.js"
+    "git-commit": "./dist/git-commit.js",
+    "git-changelog": "./dist/git-changelog.js"
   },
   "exports": {
     ".": {
@@ -25,7 +26,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "postbuild": "chmod +x dist/git-commit.js",
+    "postbuild": "chmod +x dist/git-commit.js dist/git-changelog.js",
     "prepublishOnly": "npm run build",
     "dev": "tsx src/git-commit.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
