feat: ajoute les scripts git-commit et git-changelog
Ajoute les scripts npm pour exécuter les outils git-commit et
git-changelog directement depuis npm. Supprime le script dev et corrige
le problème de fin de ligne dans le fichier.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "tsc",
     "postbuild": "chmod +x dist/git-commit.js dist/git-changelog.js",
     "prepublishOnly": "npm run build",
-    "dev": "tsx src/git-commit.ts",
+    "git-commit": "tsx src/git-commit.ts",
+    "git-changelog": "tsx src/git-changelog.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
